--- a/TaskManager/TaskManager/MainWindow.xaml
+++ b/TaskManager/TaskManager/MainWindow.xaml
@@ -1,12 +1,20 @@
-﻿<Window x:Class="TaskManager.MainWindow"
+﻿<Controls:MetroWindow x:Class="TaskManager.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TaskManager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="WorkDoer" Height="350" Width="525"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro">
     <Grid>
         
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Label Content="Вход в систему" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="20" Margin="10,10,10,40"></Label>
+            <TextBox  Controls:TextBoxHelper.Watermark="test@example.com" Controls:TextBoxHelper.ClearTextButton="True" Margin="0,0,0,15" Text="{Binding UserName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox  Controls:TextBoxHelper.Watermark="Пароль" Controls:TextBoxHelper.ClearTextButton="True" Margin="0,0,0,30" Text="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <Button Style="{DynamicResource SquareButtonStyle}" Content="Войти" Margin="15,0,15,2"></Button>
+            <Button Style="{DynamicResource SquareButtonStyle}" Content="Зарегестрироваться" Margin="15,0,15,0"/>
+        </StackPanel>
     </Grid>
-</Window>
+</Controls:MetroWindow>
