--- a/TaskManager/TaskManager/View/LoginView.xaml
+++ b/TaskManager/TaskManager/View/LoginView.xaml
@@ -8,12 +8,14 @@
         Title="WorkDoer" Height="350" Width="525"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro">
     <Grid>
-        
+        <DockPanel LastChildFill="True">
+           
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Label Content="Вход в систему" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="20" Margin="10,10,10,40"></Label>
-            <TextBox  Controls:TextBoxHelper.Watermark="test@example.com" Controls:TextBoxHelper.ClearTextButton="True" Margin="0,0,0,15" Text="{Binding UserName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <Label Content="Вход в систему" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="20" Margin="10,10,10,0"></Label>
+                <Controls:ProgressRing Foreground="{DynamicResource AccentColorBrush}" IsActive="{Binding IsLoading}"/>
+                <TextBox  Controls:TextBoxHelper.Watermark="test@example.com" Controls:TextBoxHelper.ClearTextButton="True" Margin="0,10,0,15" Text="{Binding UserName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             <PasswordBox Controls:TextBoxHelper.Watermark="Пароль" Controls:TextBoxHelper.ClearTextButton="True"
-                         Margin="0,0,0,30" Name="passwordBox"/>
+                         Margin="0,0,0,30" x:Name="passwordBox"/>
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -24,6 +26,9 @@
                          Grid.Column="1" Margin="2" />
             </Grid>
             <Button Style="{DynamicResource SquareButtonStyle}" Content="зарегистрироваться" Command="{Binding SignUpCommand}" Margin="2"/>
-        </StackPanel>
+               
+            </StackPanel>
+            
+        </DockPanel>
     </Grid>
 </Controls:MetroWindow>
