--- a/TaskManager/TaskManager/View/MainView.xaml
+++ b/TaskManager/TaskManager/View/MainView.xaml
@@ -34,8 +34,14 @@
             </Controls:Badged>
         </StackPanel>-->
 
-        <Controls:SplitButton Grid.Row="1" HorizontalAlignment="Right" ItemsSource="{Binding Users}" SelectedItem="{Binding CurrentUser}" Width="200"/>
+        <Controls:SplitButton HorizontalAlignment="Right" ItemsSource="{Binding Users}" SelectedItem="{Binding CurrentUser}" Width="250"/>
 
+        <Border BorderThickness="2" BorderBrush="AliceBlue" Grid.Row="1">
+            <DockPanel LastChildFill="True">
+                <Button DockPanel.Dock="Left" HorizontalAlignment="Right" Content="Add New" Width="100" Height="30" Margin="0 0 20 0" Command="{Binding AddCommand}" Style="{StaticResource AccentedSquareButtonStyle}"/>
+            </DockPanel>
+        </Border>
+        
         <Controls:MetroAnimatedTabControl Grid.Column="1" Grid.Row="2" TabStripPlacement="Left">
             <TabItem Name="TabProjects">                
                 <TabItem.Header>
@@ -56,7 +62,7 @@
                                     <Controls:Tile.ContentTemplate>
                                         <DataTemplate>                                            
                                             <StackPanel>
-                                                <Label Content=""/>
+                                                <Label Content="{Binding OwnerUser.Name}" HorizontalAlignment="Right"/>
                                                 <!--<StackPanel Orientation="Horizontal">
                                                     <Label Content="задч"
                                                 </StackPanel>-->
