--- a/TaskManager/TaskManager/View/RemindPasswordPage.xaml
+++ b/TaskManager/TaskManager/View/RemindPasswordPage.xaml
@@ -21,10 +21,10 @@
                     <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
-                    <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Label Content="Почта:" Margin="0,0,0,0"/>
-                <TextBox Controls:TextBoxHelper.Watermark="test@example.com" Controls:TextBoxHelper.ClearTextButton="True" Grid.Column="1" Text="{Binding Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <Controls.ProgressRing ></Controls.ProgressRing>
+                <TextBox Controls:TextBoxHelper.Watermark="test@example.com" Controls:TextBoxHelper.ClearTextButton="True" Grid.Column="2" Text="{Binding Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                
             </Grid>
             <Button Style="{DynamicResource SquareButtonStyle}" Command="{Binding RemindPasswordCommand}" Content="Напомнить пароль" Margin="60,20,60,0"/>
